fix: hide overflow in header

--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -61,6 +61,9 @@ footer {
   min-height: 24px;
   display: flex;
   align-items: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   }
 .header .dropdownBtn .arrowIcon {
   rotate: -90deg;
@@ -132,7 +135,9 @@ footer {
 .header .interationBtn>div {
   width: 100%;
   text-align: left;
-  overflow-wrap: anywhere;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .header .interationBtn:hover {
   opacity: 0.6;
@@ -148,7 +153,9 @@ footer {
   line-height: 16px;
   color: #202020;
   text-align: left;
-  overflow-wrap: anywhere;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .header .walletsContainer .nearIcon {
